--- a/style.css
+++ b/style.css
@@ -15,3 +15,17 @@ body{
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.map-responsive{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+}
+.map-responsive iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+}
